added erase functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <button class="new-grid">Create New Grid</button>
   
-
+    <button class="erase-button">Erase</button>
 
     </div>
 </body>
