--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         
     </div>
     <button class="new-grid">Create New Grid</button>
-  
     <button class="erase-button">Erase</button>
+    <button class="fill-button">Fill Bucket</button>
+    <input def type="color"  class="select-color2">
+
 
     </div>
 </body>
