--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <div class="container">
         
     </div>
-    <button class="new-grid">Create New Grid</button>
-    <button class="erase-button">Erase</button>
-    <button class="fill-button">Fill Bucket</button>
-    <input def type="color"  class="select-color2">
 
+    <div class="button-container">
+        <button class="new-grid">Create New Grid</button>
+        <button class="erase-button">Erase</button>
+     
+        <input def type="color"  class="select-color-button">
+    </div>
+   
 
     </div>
 </body>
